# sengen

./: README.md  pyproject.toml  test_interactive.py
.cursor/rules/: project-rules.mdc
examples/: config.yaml  config_mixed.yaml  config_ollama.yaml  model_info.py  run_scenario.py
sengen/: __init__.py  config.py  config_example.yaml  env.py  metrics_tracker.py  scenario_generator.py
src/sengen/: __init__.py
src/sengen/agents/: __init__.py  base.py
src/sengen/core/: __init__.py  metrics_tracker.py  model_providers.py  scenario.py
src/sengen/envs/: __init__.py  ethical_env.py  gym_env.py
src/sengen/metrics/: ethical_metrics.py  metrics_tracker.py
tests/: config.yaml  test.py  test_model_providers.py  test_scenario.py  test_scenario_integration.py
